@@ -1,3 +1,6 @@
+3559.	[func]		Check that both forms of Sender Policy Framework
+			records exist or do not exist. [RT #33355]
+
 3558.	[bug]		IXFR of a DLZ stored zone was broken. [RT #33331]
 
 3557.	[bug]		Reloading redirect zones was broken. [RT #33292]
